--- a/css/style.css
+++ b/css/style.css
@@ -798,7 +798,7 @@ h6 {
 }
 .irs-courses-img-two {
     float: left;
-    width: 33%;
+    width: 33.3%;
 }
 .irs-courses-img img {
     -webkit-transition: all 0.3s ease-in-out;
@@ -817,7 +817,7 @@ h6 {
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
-.irs-time {
+/*.irs-time {
     position: absolute;
     top: -40px;
     right: -2px;
@@ -841,7 +841,7 @@ h6 {
     text-transform: uppercase;
     background: #F4A460;
     padding: 10px 18px;
-}
+}*/
 .irs-courses-img-text {
     position: absolute;
     bottom: 0;
@@ -874,7 +874,7 @@ h6 {
     margin-right: 5px;
 }
 .irs-courses-content {
-    padding: 30px 20px 40px 20px;
+    padding: 20px 20px 20px 20px;
 }
 .irs-courses-content-two {
     float: left;
@@ -890,7 +890,7 @@ h6 {
     color: #333333;
 }
 .irs-courses-content p {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 /* Courses single css start */
