--- a/css/style.css
+++ b/css/style.css
@@ -817,6 +817,7 @@ h6 {
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
+/*
 .irs-time {
     position: absolute;
     top: -40px;
@@ -841,7 +842,7 @@ h6 {
     text-transform: uppercase;
     background: #F4A460;
     padding: 10px 18px;
-}
+}*/
 .irs-courses-img-text {
     position: absolute;
     bottom: 0;
@@ -874,7 +875,7 @@ h6 {
     margin-right: 5px;
 }
 .irs-courses-content {
-    padding: 30px 20px 40px 20px;
+    padding: 20px 20px 20px 20px;
 }
 .irs-courses-content-two {
     float: left;
@@ -890,7 +891,7 @@ h6 {
     color: #333333;
 }
 .irs-courses-content p {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 /* Courses single css start */
