Register and login button fixed again

--- a/SIHBackend/home/templates/base.html
+++ b/SIHBackend/home/templates/base.html
@@ -119,9 +119,10 @@
 	                        </nav>
 	                    </div>
 	                    <div class="col-md-2 col-sm-12">
-                            <div class="irs-log-reg">
-                                <a href="/account/login">Login</a>
-                                <a href="/account/signup">Register</a>
+                                <br>
+                                <a class="irs-log-reg" href="/account/login">Login</a>
+                                
+                                <a class="irs-log-reg"  href="/account/signup">Register</a>
                             </div>
                         </div>
 	                </div>
