--- a/SIHBackend/home/templates/base.html
+++ b/SIHBackend/home/templates/base.html
@@ -7,10 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{% static 'http://irsfoundation.com/tf/templates/EducationPark/images/apple-icon.png' %}" rel="icon" type="image/png">
+    <!-- favicon -->
     <link href="{% static 'images/favicon.png' %}" rel="shortcut icon" type="image/png">
+    
     {% block title %}
     <title>EduIndia</title>
     {% endblock %}
+
     <!-- css file -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" >
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -22,32 +25,6 @@
 	<div class="preloader"></div>
 	    <!-- Main Header Start -->
 	    <header class="irs-main-header">
-	        <div class="irs-header-top-bar">
-	            <div class="container">
-	                <div class="row">
-	                    <div class="col-md-2 col-sm-4">
-	                        <div class="irs-header-top-col irs-center-2">
-	                            <p><i class="fa fa-phone" aria-hidden="true"></i> +021 - 123 1012 1211</p>
-	                        </div>
-	                    </div>
-	                    <div class="col-md-2 col-sm-4">
-	                        <div class="irs-header-top-col irs-center-2">
-	                            <p><i class="fa fa-clock-o" aria-hidden="true"></i> 10:00 AM - 4:00 PM</p>
-	                        </div>
-	                    </div>
-	                    <div class="col-md-3 col-md-offset-5 col-sm-4">
-	                        <div class="irs-header-top-col text-right irs-center-2">
-	                            <div class="irs-social text-right irs-center-2">
-	                                <a href="index-layout1.html#"><i class="icofont icofont-social-facebook"></i></a>
-	                                <a href="index-layout1.html#"><i class="icofont icofont-social-twitter"></i></a>
-	                                <a href="index-layout1.html#"><i class="icofont icofont-social-vimeo"></i></a>
-	                                <a href="index-layout1.html#"><i class="icofont icofont-brand-linkedin"></i></a>
-	                            </div>
-	                        </div>
-	                    </div>
-	                </div>
-	            </div>
-	        </div>
 	        <div class="irs-header-nav scrollingto-fixed">
 	            <div class="container">
 	                <div class="row">
@@ -73,18 +50,16 @@
 	                                            <a href="/home">Home</a>
 	                                        </li>
 	                                        <li class="dropdown">
-	                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses <i class="fa fa-angle-down"></i></a>
+	                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses</a>
 	                                            <ul class="dropdown-menu">
-	                                                <li><a href="#" style="font-size: 13px;">Courses Grid</a>
+	                                                <li><a href="/courses/undergraduate" style="font-size: 13px;">Undergraduate Courses</a>
 	                                                </li>
-	                                                <li><a href="#" style="font-size: 13px;">Courses left sidebar</a>
-	                                                </li>
-	                                                <li><a href="#" style="font-size: 13px;">course single</a>
+	                                                <li><a href="/courses/postgraduate" style="font-size: 13px;">Postgraduate Courses</a>
 	                                                </li>
 	                                            </ul>
 	                                        </li>
 	                                        <li class="dropdown">
-	                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Study in India<i class="fa fa-angle-down"></i></a>
+	                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Study in India</a>
 	                                            <ul class="dropdown-menu">
 	                                                <li><a href="/StudyInIndia/WhyStudyInIndia" style="font-size: 13px;">Why study in India</a>
 	                                                </li>
@@ -95,15 +70,6 @@
 	                                                <li><a href="#" style="font-size: 13px;">Planning Your Study</a>
 	                                                </li>
 	                                                <li><a href="/StudyInIndia/StudyPermits" style="font-size: 13px;">Study Permits</a>
-	                                                </li>
-	                                            </ul>
-	                                        </li>
-	                                        <li class="dropdown">
-	                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Explore India <i class="fa fa-angle-down"></i></a>
-	                                            <ul class="dropdown-menu">
-	                                                <li><a href="#" style="font-size: 13px;">Indian Culture and Heritage</a>
-	                                                </li>
-	                                                <li><a href="#" style="font-size: 13px;">Student Life</a>
 	                                                </li>
 	                                            </ul>
 	                                        </li>
