--- a/SIHBackend/accounts/templates/accounts/signup_form.html
+++ b/SIHBackend/accounts/templates/accounts/signup_form.html
@@ -8,7 +8,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="irs-account-col">
-                        <h3>Register</h3>
+                        <h3>Sign Up</h3>
                         <form id="contact_form" name="contact_form" method="post">
                             {% csrf_token %}
                             {{ form.as_p }}
