--- a/SIHBackend/accounts/templates/accounts/commonForm.html
+++ b/SIHBackend/accounts/templates/accounts/commonForm.html
@@ -13,7 +13,7 @@
                         <form id="contact_form" method="post">
 						    {% csrf_token %}				   
 						    <!-- <div class="form-group"> -->
- 						    {{ form.as_ul}}
+ 						    {{ form.as_p}}
 						    
                             </div>
 							<br>
