--- a/SIHBackend/home/templates/base.html
+++ b/SIHBackend/home/templates/base.html
@@ -91,7 +91,7 @@
                         <br>
                         <a class="irs-log-reg" href="/account/login">Login</a>
                         <a class="irs-log-reg"  href="/account/signup">Signup</a>
-                        <a class="irs-log-reg"  href="/account/register">Register</a>
+                        <!--a class="irs-log-reg"  href="/account/register">Register</a-->
                     </span>
                 </div>
             </div>
