--- a/SIHBackend/accounts/templates/accounts/jee.html
+++ b/SIHBackend/accounts/templates/accounts/jee.html
@@ -5,7 +5,63 @@
 {% endblock %}
 {% block body %}
 <a target="_blank">
-<section class="irs-account-field">
+
+    <!-- Account end -->
+
+
+<style>
+body {font-family: Arial;}
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+</style>
+</head>
+<body>
+
+<p>Click on the buttons inside the tabbed menu:</p>
+
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'Jee')">Jee</button>
+  <button class="tablinks" onclick="openCity(event, 'Gate')"><a href="{% url 'gate' %}">Gate</a></button>
+  <!-- <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button> -->
+</div>
+
+<div id="Jee" class="tabcontent">
+ <section class="irs-account-field">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -22,5 +78,50 @@
             </div>
         </div>
     </section>
-    <!-- Account end -->
+ </div>
+
+<!-- <div id="Gate" class="tabcontent">
+ <section class="irs-account-field">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="irs-account-col">
+                        <h3>Application Form</h3>
+                        <form id="contact_form" name="contact_form" method="post">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <br>
+                            <button class="btn btn-default irs-big-btn" type="submit">Submit</button>
+                        </form>
+                    </div>
+                    </div>
+                </div>              
+            </div>
+        </div>
+    </section>
+</div> -->
+
+<!-- <div id="Tokyo" class="tabcontent">
+  <h3>Tokyo</h3>
+  <p>Tokyo is the capital of Japan.</p>
+</div>
+ -->
+<script>
+function openCity(evt, cityName) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(cityName).style.display = "block";
+    evt.currentTarget.className += " active";
+}
+</script>
+     
+</body>
+</html> 
 {% endblock %}
