--- a/SIHBackend/home/templates/base.html
+++ b/SIHBackend/home/templates/base.html
@@ -15,6 +15,7 @@
 
     <!-- css file -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="css/custom.css">
     <link rel="stylesheet" href="{% static 'css/style_homepage.css' %}">
     <!-- Responsive stylesheet -->
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
