--- a/SIHBackend/PlanYourStudy/templates/PlanYourStudy/category.html
+++ b/SIHBackend/PlanYourStudy/templates/PlanYourStudy/category.html
@@ -36,7 +36,7 @@
     </div>
   </form>
 <br>
-  <table class="table table-bordered">
+  <table class="table table-bordered" style="text-align:center; ">
     <thead>
       <tr>
         <th>Field</th>
@@ -53,7 +53,7 @@
           <td>{{ category.Degree }}</td>
           <td>{{ category.Address }}</td>
           <td>{{ category.College }}</td>
-          <td>{{ category.ollege }}</td>
+          <td>{{ category.Exam }}</td>
           
           <!-- <td>
             {% for group in user.groups.all %}
