--- a/SIHBackend/StudyInIndia/templates/StudyInIndia/study_permits.html
+++ b/SIHBackend/StudyInIndia/templates/StudyInIndia/study_permits.html
@@ -55,7 +55,7 @@
 
 
                             <br>The visa can be applied for from any of the Indian Embassies / High Commission.
-                            <br>The students holding Student Visa of more than 180 days are required to register himself/herself with the local Foreigners Regional Registration Officer (External website that opens in a new window) (FRRO) within 14 days of arrival.
+                            <br>The students holding Student Visa of more than 180 days are required to register himself/herself with the local Foreigners Regional Registration Officer (External website that opens in a new window) (FRRO) within 14 days of arrival.For further queries you can <a href="https://archive.india.gov.in/overseas/study_india/studyinindia.php?id=5">go here</a>.
                             </p>
                     </div>
                 </div>
