--- a/SIHBackend/PlanYourStudy/templates/PlanYourStudy/category.html
+++ b/SIHBackend/PlanYourStudy/templates/PlanYourStudy/category.html
@@ -44,6 +44,7 @@
         <th>Address</th>
         <th>College</th>
         <th>Exam</th>
+        <th>Interested</th>
       </tr>
     </thead>
     <tbody>
@@ -54,7 +55,7 @@
           <td>{{ category.Address }}</td>
           <td>{{ category.College }}</td>
           <td>{{ category.Exam }}</td>
-          
+          <td><input type="checkbox" />    &nbsp;   </td>
           <!-- <td>
             {% for group in user.groups.all %}
               {{ group }}
