Nav bar changed a lil

--- a/SIHBackend/home/templates/base.html
+++ b/SIHBackend/home/templates/base.html
@@ -41,7 +41,7 @@
                                         <span class="icon-bar"></span>
                                     </button>
                                     <a class="navbar-brand" href="index-layout1.html">
-                                        <img src="{% static 'images/logo.png' %}" alt="">
+                                        <img src="{% static 'images/logo1.png' %}" alt="">
                                     </a>
                                 </div>
                                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -70,13 +70,14 @@
                                                 </li>
                                                 <li><a href="/StudyInIndia/WorkOpp" style="font-size: 13px;">Work Opportunities</a>
                                                 </li>
-                                                <li><a href="#" style="font-size: 13px;">Plan Your Study</a>
-                                                </li>
+                                                <!-- <li><a href="/PlanYourStudy/search" style="font-size: 13px;">Plan Your Study</a>
+                                                </li> -->
                                                 <li><a href="/StudyInIndia/StudyPermits" style="font-size: 13px;">Study Permits</a>
                                                 </li>
                                             </ul>
                                         </li>                                     
-                                     
+                                        <li><a href="/PlanYourStudy/search" style="font-size: 13px;">Plan Your Study</a>
+                                        </li> 
                                         <li><a href="#">faq</a>
                                         </li>
                                         <li><a href="#">Contact</a>
