--- a/SIHBackend/courses/templates/courses/undergraduate.html
+++ b/SIHBackend/courses/templates/courses/undergraduate.html
@@ -25,7 +25,7 @@
                             </div>
                         </div>
                         <div class="irs-courses-content">
-                            <h4><a href="#">Technology</a></h4>
+                            <h4><a href="/courses/technology">Technology</a></h4>
                             <p>pplication of science and practical knowledge to the innovation,
                                  design, construction, machines, and organizations</p>
                        
@@ -47,7 +47,7 @@
                             </div>
                         </div>
                         <div class="irs-courses-content">
-                            <h4><a href="#">Science</a></h4>
+                            <h4><a href="/courses/ugscience/">Science</a></h4>
                             <p>Imparts knowledge that carries a strong flavour of engineering and an exposure to social science disciplines.</p>
                            
                         </div>
@@ -68,7 +68,7 @@
                             </div>
                         </div>
                         <div class="irs-courses-content">
-                            <h4><a href="#"> Arts</a></h4>
+                            <h4><a href="/courses/arts"> Arts</a></h4>
                             <p>Is a bachelor's degree awarded for an undergraduate course or program in either the liberal arts, the sciences, or both.</p>
                            
                         </div>
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <div class="irs-courses-content">
-                            <h4><a href="#">Management</a></h4>
+                            <h4><a href="/courses/management">Management</a></h4>
                             <p>An academic discipline, investigating areas such as social organization and organizational leadership.</p>
                             
                         </div>
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                         <div class="irs-courses-content">
-                            <h4><a href="#">Commerce</a></h4>
+                            <h4><a href="/courses/commerce">Commerce</a></h4>
                             <p> Provides students with a wide range of managerial skills,
                                  while building competence in a particular area of business </p>
                            
@@ -191,7 +191,7 @@
                             </div>
                         </div>
                         <div class="irs-courses-content">
-                            <h4><a href="#">Architecture</a></h4>
+                            <h4><a href="/courses/architecture">Architecture</a></h4>
                             <p> The process and the product of planning, designing, and constructing buildings or any other structures.</p>
                            
                         </div>
