--- a/SIHBackend/home/templates/base.html
+++ b/SIHBackend/home/templates/base.html
@@ -18,7 +18,10 @@
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <link rel="stylesheet" href="{% static 'css/style_homepage.css' %}">
     <!-- Responsive stylesheet -->
+    <link rel="stylesheet" href="{% static 'css/course-table.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+
+
 </head>
 
 <body>
@@ -70,8 +73,8 @@
                                                 </li>
                                                 <li><a href="/StudyInIndia/WorkOpp" style="font-size: 13px;">Work Opportunities</a>
                                                 </li>
-                                                <!-- <li><a href="/PlanYourStudy/search" style="font-size: 13px;">Plan Your Study</a>
-                                                </li> -->
+                                                <li><a href="/StudyInIndia/Scholarship" style="font-size: 13px;">Scholarship</a>
+                                                </li>
                                                 <li><a href="/StudyInIndia/StudyPermits" style="font-size: 13px;">Study Permits</a>
                                                 </li>
                                             </ul>
@@ -82,6 +85,9 @@
                                         </li>
                                         <li><a href="#">Contact</a>
                                         </li>
+                                       <!--  </li>
+                                        <li><a href="/scholarship">Scholarship</a>
+                                        </li> -->
                                     </ul>
                                 </div>
                                 <!-- /.navbar-collapse -->
@@ -148,7 +154,6 @@
                 $this.data('counted', false);
                 $this.html('0');
             });
-
             $(window).bind('scroll', function() {
                 var speed = 3000;
                 $('.start-count').each(function() {
